# PM_IBKR

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.agents/skills/: SKILL.md
dashboard/: index.html
src/: config.py  dashboard_api.py  event_bus.py  main.py  signal_config.py
src/analytics/: ceasefire.py  hormuz.py  latency.py  pnl_validator.py  signals.py  spread.py
src/collectors/: base.py  eia.py  polymarket.py  portwatch.py  scanner.py  sentiment.py  tradfi.py
src/execution/: order_manager.py  polymarket_exec.py  tradfi_exec.py  twap.py
src/models/: events.py
src/risk/: capital.py  depeg_monitor.py  limits.py
